# open-hrsdk

./: NOTICE  README.md
audio_stream/: CMakeLists.txt  package.xml
audio_stream/package/: common.sh  package.sh
audio_stream/scripts/: run.py  stream_player.py
haipy/: .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  README.md  requirements.txt  setup.cfg  setup.py
haipy/docs/: conf.py  index.rst
hr_msgs/: CMakeLists.txt  package.xml
hr_msgs/cfg/: Animations.cfg  Expressions.cfg  ExternalAnimation.cfg  ExternalArmsPose.cfg  Keepalive.cfg  Parallax.cfg  Visemes.cfg
hr_msgs/msg/: Assign.msg  AudioStream.msg  BlinkCycle.msg  Body.msg  ChatMessage.msg  ChatResponse.msg  ChatResponses.msg  CurrentFrame.msg  Doa.msg  Event.msg  EventMessage.msg  FSShapekey.msg  FSShapekeys.msg  FSValues.msg  Face.msg  FaceEvent.msg  Faces.msg  FacialActionUnit.msg  Feature.msg  Features.msg  Forget.msg  ForgetAll.msg  Gesture.msg  Gestures.msg  GetAPIVersion.msg  Hand.msg  HeadFun.msg  Luminance.msg  MakeFaceExpr.msg  ManyEarsTrackedAudioSource.msg  Motion.msg  MotionSignal.msg  Motions.msg  MotorCommand.msg  MotorState.msg  MotorStateList.msg  Object.msg  Objects.msg  OnsetMessage.msg  People.msg  (+40 more)
hr_msgs/package/: common.sh  package.sh
hr_msgs/srv/: AgentChat.srv  AgentFeedback.srv  AgentRegister.srv  AgentUnregister.srv  AnimationLength.srv  ChatService.srv  ChatSession.srv  ConfigurableNodes.srv  Current.srv  Emotion.srv  EyeState.srv  FaceId.srv  FaceLandmarks.srv  GetAnimationLength.srv  GetInteger.srv  GetIntent.srv  GetMode.srv  GetParam.srv  Json.srv  Load.srv  LoadPerformance.srv  MotionManagement.srv  MotorStates.srv  MotorValues.srv  MotorValuesBool.srv  NodeAction.srv  NodeConfiguration.srv  NodeDescription.srv  PerformanceCommand.srv  ResetMotors.srv  Run.srv  RunByName.srv  SaveFace.srv  SetActuatorsControl.srv  SetMode.srv  SetParam.srv  SetProperties.srv  SetScene.srv  StringArray.srv  StringTrigger.srv  (+6 more)
modules/asr/: .gitignore  .isort.cfg  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  NOTICES  README.md  package.xml  requirements.txt  setup.py  test.launch
modules/asr/cfg/: AudioAnalyzer.cfg
modules/asr/depends/: depends.dep
modules/asr/launch/: run.launch  sdk.launch
modules/asr/package/: common.sh  package.sh
modules/asr/scripts/: audio_analyzer.py  fallback.py  poc.py  recognizer_node.py  recognizer_node.sh  speech_test.py
modules/asr/src/speech_recognizer/: __init__.py  audio.py  audio_sensor.py  base.py  ddr_configs.py  langauge_rank.py  onset.py  phrase_engine.py  recognizer.py  status.py  translator.py  utils.py  vad.py
modules/audio_stream/: CMakeLists.txt  package.xml
modules/audio_stream/package/: common.sh  package.sh
modules/haipy/: .coveragerc  .gitignore  .readthedocs.yml  pyproject.toml  setup.cfg
modules/haipy/scripts/arf/: pull_content.py
modules/haipy/src/haipy/: __init__.py  atlas_vectordb.py  auth.py  base.py  chat_history.py  crud.py  s3sync.py  utils.py
modules/haipy/src/haipy/arf/generators/: __init__.py  base.py  copyme.py  instructive.py  macro.py  prompt.py
modules/haipy/src/haipy/generative/: base.py
modules/haipy/src/haipy/memory_manager/: __init__.py
modules/haipy/src/haipy/memory_manager/amodels/: base.py  performance.py  prompt_template.py
modules/haipy/src/haipy/memory_manager/models/: __init__.py  base.py
modules/haipy/src/haipy/nlp/: sentence_embedding.py  translate.py  wordsub.py
modules/haipy/src/haipy/schemas/: airtable_schemas.py
modules/haipy/src/haipy/text_processing/template/: __init__.py  filters.py
modules/haipy/src/haipy/text_processing/template/functions/: basic.py
modules/haipy/tests/: test_schema.py
modules/haipy/tests/test_data/: params.yaml
modules/haipy/tests/test_data/character-db/tables/: Scripts.json
modules/haipy/tests/test_data/event-db/tables/: Events.json
modules/ros_chatbot/: .gitignore  .isort.cfg  .pre-commit-config.yaml  CMakeLists.txt  NOTICES  README.md  dev.sh  package.xml  requirements.txt  setup.py
modules/ros_chatbot/app/: main.py
modules/ros_chatbot/cfg/: ContentManager.cfg  ROSBot.cfg  ROSChatbot.cfg
modules/ros_chatbot/launch/: sdk.launch
modules/ros_chatbot/package/: package.sh
modules/ros_chatbot/scripts/: analysis.py  chat_agent_example.py  content_manager.py  n8n_client.py  priming.py  profiler  rosbot.py  run.py  server.py  services.py  tg.py
modules/ros_chatbot/scripts/cypher/: query.cypher  sample_graph.cypher
modules/ros_chatbot/src/ros_chatbot/: action_parser.py  activity_monitor.py  bm25.py  chat_agent_schedular.py  chat_server.py  context_manager.py  data_loader.py  db.py  ddr_node.py  handlers.py  reconfiguration.py  response_ranker.py  response_resolver.py  safety_classifier.py  scene_manager.py  schemas.py  session_manager.py  shared.py  state_machine.py  utils.py  visual_processing.py
modules/ros_chatbot/src/ros_chatbot/agents/: __init__.py  ai21.py  aiml.py  baidu_unit.py  blenderbot.py  chatgpt.py  chatgpt_web.py  chatscript.py  conversation_pb2.py  conversation_pb2_grpc.py  ddg.py  dummy.py  gpt2.py  gpt3.py  legend_chat.py  llama.py  llm_chat.py  model.py  qa.py  quickchat.py  quicksearch.py  rosagent.py  snet.py  soultalk.py  tg_agent.py  translator.py  vector_chat.py  xiaoi.py  xiaoice.py  youchat.py
modules/ros_chatbot/src/ros_chatbot/interact/: action_types.py  base.py  controller_manager.py  event_generator.py  event_types.py  state.py
modules/ros_chatbot/src/ros_chatbot/interact/controllers/: __init__.py  base.py  command_controller.py  emotion_controller.py  interruption_controller.py  interruption_resume_controller.py  language_switch_controller.py  monitor_controller.py  placeholder_utterance_controller.py  responsivity_controller.py  user_acquisition_controller.py
modules/ros_chatbot/src/ros_chatbot/pyaiml/: AimlParser.py  DefaultSubs.py  Kernel.py  PatternMgr.py  Utils.py  WordSub.py  __init__.py
modules/ros_chatbot/test/: test_aiml.py  test_controllers.py
modules/ros_chatbot/test/data/: control.yaml  controllers.yaml
ttsserver/: requirements.txt  setup.py
(+266 files in other folders)
