<?xml version="1.0"?>
<package>
  <name>hr_msgs</name>
  <version>0.2.3</version>
  <description>The common ROS messages used in Hanson Robotics</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <license>Copyright (c) 2020, Hanson Robotics</license>
  <maintainer email="wenwei@hansonrobotics.com">Wenwei Huang</maintainer>
  <maintainer email="vytas@hansonrobotics.com">Vytas Krisciunas</maintainer>
  <author email="wenwei@hansonrobotics.com">Wenwei Huang</author>
  <author email="vytas@hansonrobotics.com">Vytas Krisciunas</author>

 <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv_apps</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
