<?xml version="1.0"?>
<!--
Copyright (C) 2017-2025 Hanson Robotics

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->
<package>
  <name>hr_msgs</name>
  <version>0.2.3</version>
  <description>The common ROS messages used in Hanson Robotics</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <license>Copyright (c) 2020, Hanson Robotics</license>
  <maintainer email="wenwei@hansonrobotics.com">Wenwei Huang</maintainer>
  <maintainer email="vytas@hansonrobotics.com">Vytas Krisciunas</maintainer>
  <author email="wenwei@hansonrobotics.com">Wenwei Huang</author>
  <author email="vytas@hansonrobotics.com">Vytas Krisciunas</author>

 <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv_apps</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
