<?xml version="1.0"?>
<!--
Copyright (C) 2017-2025 Hanson Robotics

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->
<package format="2">
    <name>asr</name>
    <version>0.4.0</version>
    <description>The Hanson Robotics Speech Recognition package</description>

    <license>Copyright (c) 2020, Hanson Robotics</license>
    <maintainer email="wenwei@hansonrobotics.com">Wenwei Huang</maintainer>
    <maintainer email="vytas@hansonrobotics.com">Vytas Krisciunas</maintainer>
    <author email="wenwei@hansonrobotics.com">Wenwei Huang</author>
    <author email="vytas@hansonrobotics.com">Vytas Krisciunas</author>
    <author email="desmond.germans@hansonrobotics.com">Desmond Germans</author>
    <author email="jamie.diprose@hansonrobotics.com">Jamie Diprose</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>audio_stream</build_depend>

    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>std_srvs</build_export_depend>
    <build_export_depend>dynamic_reconfigure</build_export_depend>
    <build_export_depend>audio_stream</build_export_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>dynamic_reconfigure</exec_depend>
    <exec_depend>hr_msgs</exec_depend>
    <exec_depend>chatbot</exec_depend>
    <exec_depend>audio_stream</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
