<?xml version="1.0"?>
<!--
Copyright (C) 2017-2025 Hanson Robotics

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->
<package>
  <name>audio_stream</name>
  <version>0.4.0</version>
  <description>The Hanson Robotics audio_stream package</description>

    <license>GPLv3</license>
    <maintainer email="wenwei@hansonrobotics.com">Wenwei Huang</maintainer>

    <author email="vytas@hansonrobotics.com">Vytas Krisciunas</author>
    <author email="desmond.germans@hansonrobotics.com">Desmond Germans</author>
    <author email="jamie.diprose@hansonrobotics.com">Jamie Diprose</author>
    <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
